<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:layout_margin="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/textView"
        android:textSize="24sp"
        android:textStyle="bold|italic"
       android:gravity="center"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="11dp"
            android:id="@+id/editName"
            android:hint="@string/enter_name"
            android:gravity="center_vertical|center"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textStyle="normal"/>
</LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/textView2"
        android:textStyle="bold|italic"
        android:textSize="24sp"
        android:gravity="center"
        android:hint="@string/password"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="11dp"
        android:id="@+id/editPass"
        android:hint="@string/enter_password"
        android:gravity="center_vertical|center"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textStyle="normal"/>
    </LinearLayout>

    <Button
        android:text="@string/add_user"
        android:layout_width="match_parent"
        android:layout_margin="14dp"
        android:layout_height="80dp"
        android:id="@+id/button"
        android:textStyle="bold|italic"
        android:textSize="20sp"
        android:onClick="addUser"
        android:layout_marginTop="23dp"/>

</LinearLayout>